--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library(json11 json11.cpp)
 target_include_directories(json11 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_options(json11
-  PRIVATE -fno-rtti -fno-exceptions -Wall -Wextra -Werror)
+
+if(WIN32)
+else()
+  target_compile_options(json11 PRIVATE -fno-rtti -fno-exceptions -Wall -Wextra -Werror)
+endif()
+
 configure_file("json11.pc.in" "json11.pc" @ONLY)
 
 if (JSON11_BUILD_TESTS)
